<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="tw.com.frankchang.houli.classno_02_order.MainActivity"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/brunch"
        android:id="@+id/Content01">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TableNumber"
                android:textSize="@dimen/TextSize_26"
                android:textColor="@color/Blue"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="@dimen/TextSize_26"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Customer"
                android:textSize="@dimen/TextSize_16"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/VIP"
                android:textSize="@dimen/TextSize_16"/>
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Main_meal"
            android:textSize="@dimen/TextSize_26"
            android:textColor="@color/Blue"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="60dp">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A_meal"
                    android:textSize="@dimen/TextSize_16"/>

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/C_meal"
                    android:textSize="@dimen/TextSize_16"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B_meal"
                    android:textSize="@dimen/TextSize_16"/>

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/D_meal"
                    android:textSize="@dimen/TextSize_16" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Beverage"
            android:textSize="@dimen/TextSize_26"
            android:textColor="@color/Blue"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Coffee"
                android:textSize="@dimen/TextSize_16"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BlackTea"
                android:textSize="@dimen/TextSize_16"/>
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Btn_Order"
            android:textSize="@dimen/TextSize_26"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=" "
            android:textSize="@dimen/TextSize_16"
            android:textColor="@color/Green"/>
    </LinearLayout>

